--- a/acc/client/layouts/sidebar-menu.html
+++ b/acc/client/layouts/sidebar-menu.html
@@ -25,7 +25,7 @@
                 <span>{{_ "acc.sidebarMenu.received"}}</span>
             </a>
         </li>
-<li class="treeview {{isActiveRoute name='pos.prepaidOrder'}}">
+        <li class="treeview {{isActiveRoute name='pos.prepaidOrder'}}">
             <a href="{{pathFor 'pos.prepaidOrder'}}">
                 <i class="fa fa-plus"></i>
                 <span>{{_ "pos.sidebarMenu.prepaidOrder"}}</span>
@@ -70,75 +70,97 @@
     {{/if}}
 
     <!--Data-->
-    {{#if isInRole 'data-insert,data-update,data-remove' 'Acc'}}
-        <li class="treeview">
-            <a href="#">
-                <i class="fa fa-eye-slash"></i>
-                <span>Data</span>
-                <i class="fa fa-angle-left pull-right"></i>
-            </a>
-            <ul class="treeview-menu" style="display: none;">
+    <li class="treeview">
+        <a href="#">
+            <i class="fa fa-eye-slash"></i>
+            <span>Data</span>
+            <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu" style="display: none;">
+
+            {{#if isInRole 'reporter-journal' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.journalReport'}}">
                     <a href="{{pathFor 'acc.journalReport'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.journalReport"}}</span>
                     </a>
                 </li>
+            {{/if}}
+            {{#if isInRole 'reporter-ledger' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.ledgerReport'}}">
                     <a href="{{pathFor 'acc.ledgerReport'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.ledgerReport"}}</span>
                     </a>
                 </li>
+            {{/if}}
+            {{#if isInRole 'reporter-trialBalance' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.trialBalanceReport'}}">
                     <a href="{{pathFor 'acc.trialBalanceReport'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.trialBalanceReport"}}</span>
                     </a>
                 </li>
+            {{/if}}
+            {{#if isInRole 'reporter-transactionDetail' 'Acc'}}
 
+                <li class="{{isActiveRoute name='acc.transactionDetailReport'}}">
+                    <a href="{{pathFor 'acc.transactionDetailReport'}}">
+                        <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.transactionDetailReport"}}</span>
+                    </a>
+                </li>
+            {{/if}}
+            {{#if isInRole 'reporter-fixAssetDep' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.fixAssetDep'}}">
                     <a href="{{pathFor 'acc.fixAssetDep'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.fixAssetDep"}}</span>
                     </a>
                 </li>
-
-            </ul>
-        </li>
-    {{/if}}
+            {{/if}}
+        </ul>
+    </li>
 
 
     <!--Report-->
-    {{#if isInRole 'reporter' 'Acc'}}
-        <li class="treeview">
-            <a href="#">
-                <i class="fa fa-file-pdf-o"></i>
-                <span>REPORT</span>
-                <i class="fa fa-angle-left pull-right"></i>
-            </a>
-            <ul class="treeview-menu" style="display: none;">
+    <li class="treeview">
+
+        <a href="#">
+            <i class="fa fa-file-pdf-o"></i>
+            <span>REPORT</span>
+            <i class="fa fa-angle-left pull-right"></i>
+        </a>
+
+        <ul class="treeview-menu" style="display: none;">
+            {{#if isInRole 'reporter-profitLost' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.ProfitLostReport'}}">
                     <a href="{{pathFor 'acc.ProfitLostReport'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.profitLostReport"}}</span>
                     </a>
                 </li>
+            {{/if}}
+            {{#if isInRole 'reporter-balanceSheet' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.balanceSheetReport'}}">
                     <a href="{{pathFor 'acc.balanceSheetReport'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.balanceSheetReport"}}</span>
                     </a>
                 </li>
+            {{/if}}
+            {{#if isInRole 'reporter-cash' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.cashReport'}}">
                     <a href="{{pathFor 'acc.cashReport'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.cashReport"}}</span>
                     </a>
                 </li>
-
+            {{/if}}
+            {{#if isInRole 'reporter-profitLostComparation' 'Acc'}}
                 <li class="{{isActiveRoute name='acc.profitLostComparationReport'}}">
                     <a href="{{pathFor 'acc.profitLostComparationReport'}}">
-                        <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.profitLostComparationReport"}}</span>
+                        <i class="fa fa-angle-right"></i> <span>{{_
+                            "acc.sidebarMenu.profitLostComparationReport"}}</span>
                     </a>
                 </li>
+            {{/if}}
 
-            </ul>
-        </li>
-    {{/if}}
+
+        </ul>
+    </li>
     <!--Chart-->
     {{#if isInRole 'setting' 'Acc'}}
         <li class="treeview">
@@ -158,7 +180,7 @@
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.accountComparation"}}</span>
                     </a>
                 </li>
-               <!-- <li class="{{isActiveRoute name='acc.companySnapshot'}}">
+                <!-- <li class="{{isActiveRoute name='acc.companySnapshot'}}">
                     <a href="{{pathFor 'acc.companySnapshot'}}">
                         <i class="fa fa-angle-right"></i> <span>{{_ "acc.sidebarMenu.companySnapshot"}}</span>
                     </a>
